# adpsloguploader-rs

./: Cargo.toml
src/: input.js  main.rs
