[package]
name = "adpsloguploader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.78"
notify = {version = "6.1.1", default-features = false, features = ["macos_kqueue", "serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
